[fix] Don't show scrollbar in preview panel.

--- a/src/danbooru-ex.css
+++ b/src/danbooru-ex.css
@@ -29,7 +29,7 @@
 
 #ex-preview-panel > div {
   display: flex;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 #ex-preview-panel > div > article {
